<resources>
    <string name="app_name">Weather App</string>
    <string name="date_time">Wed, 28 Nov 2018</string>
    <string name="udupi_karnataka">Udupi, Karnataka</string>
    <string name="add_to_favourite">Add to favourite</string>
    <string name="favourites">Favourites</string>
    <string name="recent_search">Recent Search</string>
    <string name="favourite">Favourite</string>
    <string name="min_max">Min - Max</string>
    <string name="precipitation">Precipitation</string>
    <string name="search_for_city">Search for city</string>
    <string name="home">Home</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="you_recently_searched_for">You recently searched for</string>
    <string name="clear_all">Clear All</string>
    <string name="city_you_added_as_favourite">City you added as favourite</string>
    <string name="remove_all">Remove All</string>
    <string name="no_favourites_added">No Favourites added</string>
    <string name="no_recent_search">No Recent Search</string>
    <string name="show_result">Show Result</string>
</resources>