<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_android"
    tools:context=".activity.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:logo="@drawable/logo_toolbar"
            app:navigationIcon="@drawable/icon_menu_white"
            app:title=" " />

        <LinearLayout
            android:id="@+id/date_time_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="94dp"
            android:layout_marginEnd="70dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:letterSpacing="0.25"
                android:lineSpacingMultiplier="1.15"
                android:text=""
                android:textAppearance="@style/date_time" />

            <DigitalClock
                android:id="@+id/time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textAppearance="@style/date_time" />

        </LinearLayout>

        <TextView
            android:id="@+id/place_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="111dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="111dp"
            android:width="138dp"
            android:height="21dp"
            android:gravity="center"
            android:lineSpacingMultiplier="1.17"
            android:text="@string/udupi_karnataka"
            android:textAppearance="@style/district_state"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_time_layout" />

        <LinearLayout
            android:id="@+id/favourite_layout"
            android:layout_width="119dp"
            android:layout_height="17dp"
            android:layout_marginStart="121dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="120dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/place_tv">

            <ImageView
                android:id="@+id/favourite_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_favourite" />

            <TextView
                android:layout_width="94dp"
                android:layout_height="15dp"
                android:text="@string/add_to_favourite"
                android:textAppearance="@style/AddToFavourite" />
        </LinearLayout>

        <ImageView
            android:id="@+id/weather_iv"
            android:layout_width="64dp"
            android:layout_height="67dp"
            android:layout_marginStart="148dp"
            android:layout_marginTop="81dp"
            android:layout_marginEnd="148dp"
            android:src="@drawable/icon_sunny"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favourite_layout" />

        <LinearLayout
            android:id="@+id/display_temperature_layout"
            android:layout_width="119dp"
            android:layout_height="61dp"
            android:layout_marginStart="121dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="120dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weather_iv">

            <TextView
                android:id="@+id/temperature_tv"
                android:layout_width="60dp"
                android:layout_height="61dp"
                android:gravity="left"
                android:lineSpacingMultiplier="1.17"
                android:text="31"
                android:textAppearance="@style/temperature" />

            <LinearLayout
                android:layout_width="56dp"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="6dp"
                android:background="@drawable/strokes">

                <TextView
                    android:id="@+id/celsius"
                    android:layout_width="26dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="&#xb0;C"
                    android:textColor="#E32843" />

                <TextView
                    android:id="@+id/fahrenheit"
                    android:layout_width="28dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="&#xb0;F"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/temperature_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="126dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="126dp"
            android:gravity="center"
            android:text="Mostly Sunny"
            android:textAppearance="@style/weather"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_temperature_layout" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="#1AFFFFFF"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <RelativeLayout
                    android:id="@+id/temp"
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:id="@+id/temp_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_temperature_info" />

                    <TextView
                        android:id="@+id/min_max"
                        android:layout_width="57dp"
                        android:layout_height="15dp"
                        android:layout_marginStart="18dp"
                        android:layout_toEndOf="@id/temp_iv"
                        android:lineSpacingMultiplier="1.15"
                        android:text="@string/min_max"
                        android:textAppearance="@style/MinMax" />

                    <TextView
                        android:id="@+id/min_max_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="21dp"
                        android:layout_below="@+id/min_max"
                        android:layout_marginStart="38dp"
                        android:layout_marginTop="5dp"
                        android:text="22 - 34"
                        android:textAppearance="@style/temp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/precipitation_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="41dp"
                    android:layout_marginStart="33dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:id="@+id/precipitation_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_precipitation_info" />

                    <TextView
                        android:id="@+id/precipitation"
                        android:layout_width="76dp"
                        android:layout_height="15dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="0dp"
                        android:layout_toEndOf="@id/precipitation_iv"
                        android:lineSpacingMultiplier="1.15"
                        android:text="@string/precipitation"
                        android:textAppearance="@style/Precipitation_text" />

                    <TextView
                        android:id="@+id/precipitation_tv"
                        android:layout_width="56dp"
                        android:layout_height="21dp"
                        android:layout_below="@+id/precipitation"
                        android:layout_marginStart="42dp"
                        android:layout_marginTop="5dp"
                        android:text="0%"
                        android:textAppearance="@style/Precipitation" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/humidity_layout"
                    android:layout_width="94dp"
                    android:layout_height="41dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginBottom="20dp">

                    <ImageView
                        android:id="@+id/humidity_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_humidity_info" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="57dp"
                        android:layout_height="15dp"
                        android:layout_marginStart="16dp"
                        android:layout_toEndOf="@id/humidity_iv"
                        android:lineSpacingMultiplier="1.15"
                        android:text="Humidity"
                        android:textAppearance="@style/Humidity_text" />

                    <TextView
                        android:id="@+id/humidity_tv"
                        android:layout_width="56dp"
                        android:layout_height="21dp"
                        android:layout_below="@+id/humidity"
                        android:layout_marginStart="38dp"
                        android:layout_marginTop="5dp"
                        android:text="47%"
                        android:textAppearance="@style/Humidity" />

                </RelativeLayout>
            </LinearLayout>
        </HorizontalScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:paddingTop="25dp"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

